Fixed issue where map caused a scrollbar because of full height
As we refactored the navbar using native bulma styles, we also lost the reduction of full height when we want to avoid the scrollbar

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,6 +7,7 @@
 // Bootstrap
 @import "node_modules/bulma/bulma.sass";
 @import "node_modules/bulma-tooltip/dist/bulma-tooltip.sass";
+@import "node_modules/bulma/sass/components/navbar.sass";
 
 .is-clickable {
   cursor: pointer;
@@ -40,7 +41,11 @@ hr.border-dashed {
   color: darken($info, 20%);
 }
 
-/* Bulma modal */
+/* Bulma overrides */
+.hero.is-fullheight-excluding-navbar {
+    min-height: calc(100vh - #{$navbar-height});
+}
+
 .modal-navigate {
   display: inline-block;
   position: absolute;
